# KT_Generator

./: .gitignore  CodeParser.py  CreateVideo.py  KT Generator (hackathon).pptx  README.md  ResponseGenerator.py  main.py  pyproject.toml  slack_util.py
Code/Code QA/: create_index.py  query_index.py
Code/KT Generator/: .env.sample  CarbonSnippets.py  CreateVideo.py  DIDVideoGenerator.py  ResponseGenerator.py  config.py  main.py  open_ai_client.py
src/kt_generator/: CodeParser.py  CreateVideo.py  DIDVideoGenerator.py  ResponseGenerator.py  main.py  open_ai_client.py
